# DBTerm

./: .gitignore  CERTIFICATE.md  LICENSE  README.md  build.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: db-feature-audit.md
scripts/: audit-db-features.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: db_tunnel.rs  keychain.rs  lib.rs  models.rs  pty.rs  storage.rs  tester.rs
src-tauri/src/commands/: clickhouse.rs  clickhouse_tcp.rs  db.rs  db_caps.rs  db_dba.rs  db_diff.rs  db_export.rs  db_extra.rs  db_tx.rs  duckdb.rs  mariadb_admin.rs  mod.rs  oracle.rs  pg_admin.rs  pty.rs  query.rs  sqlite_admin.rs  ssh.rs  ssh_config.rs  ssh_keys.rs  tidb_cdc.rs
src-tauri/src/commands/driver/: download.rs  mod.rs  probe.rs
src-tauri/src/commands/mongo/: admin.rs  aggregate.rs  browse.rs  crud.rs  gridfs.rs  index.rs  inspect.rs  mod.rs  schema.rs  security.rs  stream.rs  transfer.rs  tx.rs
src-tauri/src/commands/redis/: keys.rs  mod.rs  pubsub.rs  server.rs  slowlog_store.rs  transfer.rs  value.rs
src-tauri/src/commands/sqlserver/: admin.rs  extra.rs  ha.rs  mod.rs  security.rs
src-tauri/src/ssh/: mod.rs  sftp.rs  tunnel.rs
src-tauri/windows/: installer-hooks.nsh
src/components/: ConfirmDialog.tsx  DbErrorBar.tsx  ErrorBoundary.tsx  ExportDoneModal.tsx  ExportTaskDock.tsx  GlobalTooltip.tsx  QuitGuard.tsx  Toaster.tsx
src/components/ActivityBar/: index.tsx
src/components/AssetPanel/: ConnectionItem.tsx  DbSchemaTree.tsx  KnownHostsManager.tsx  SchemaFilterPopup.tsx  index.tsx
src/components/ConnectionForm/: DriverManager.tsx  index.tsx
src/components/ContextMenu/: index.tsx
src/components/DbTools/: AlterTableWizard.tsx  BackupPanel.tsx  BackupRestorePanel.tsx  BatchHealthPanel.tsx  BinlogFlashbackPanel.tsx  BroadcastPanel.tsx  (+86 more)
src/stores/: appStore.ts  capacityStore.ts  commandHistoryStore.ts  confirmStore.ts  dbCapsStore.ts  dbClipboardStore.ts  dbErrorStore.ts  dbToolsStore.ts  exportDoneStore.ts  exportTaskStore.ts  groupStore.ts  objectDraftStore.ts  queryHistoryStore.ts  queryStore.ts  redisStore.ts  rollbackStore.ts  schedulerStore.ts  schemaHistoryStore.ts  schemaVisibilityStore.ts  settingsStore.ts  toastStore.ts
src/themes/: index.ts
src/types/: index.ts
src/utils/: activeRegion.ts  adopt.ts  auditLog.ts  clipboard.ts  cmSearchPhrases.ts  cmTableLink.ts  connectionEnv.test.ts  connectionEnv.ts  connectionUrl.test.ts  connectionUrl.ts  dbCopyPaste.ts  dbError.ts  exportTasks.ts  format.ts  formatDuration.ts  menuClamp.ts  multiWindow.ts  objectEditor.ts  objectSaveRegistry.ts  routineExec.ts  savedQueries.ts  schemaArchiveExport.ts  schemaRefresh.ts  shortcuts.ts  sqlDialect.test.ts  sqlDialect.ts  sqlHighlight.ts  terminalCommand.test.ts  terminalCommand.ts  useShortcuts.ts  wheelScroll.test.ts  wheelScroll.ts  wheelScrollCore.ts  windowRegistry.ts  windowTag.ts
(+88 files in other folders)
