[package]
name = "app"
version = "0.1.19"
description = "DBTerm - SSH 和数据库管理工具"
authors = ["DBTerm"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
panic = "abort"

# 主二进制命名为 DBTerm（与 productName 一致），使 dev 模式程序坞显示 DBTerm 而非 app
[[bin]]
name = "DBTerm"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["macos-private-api"] }
tauri-plugin-log = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
log            = "0.4"
tokio          = { version = "1", features = ["full"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "postgres",
    "sqlite",
    "chrono",
    "json",
] }
chrono = { version = "0.4", features = ["serde"] }
# tokio-rustls-comp：TLS(rediss://) 支持；tls-rustls-insecure：允许"加密不验证"模式（require）
redis            = { version = "0.26", features = ["tokio-rustls-comp", "tls-rustls-insecure"] }
uuid     = { version = "1", features = ["v4"] }
russh        = { version = "0.46", features = [] }
russh-keys   = "0.46"
async-trait  = "0.1"
base64       = "0.22"
tokio-socks  = "0.5"
portable-pty = "0.8"
tauri-plugin-dialog = "2"
russh-sftp = "2.3.0"
encoding_rs = "0.8.35"
calamine = "0.26"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
futures = "0.3"
mongodb = "3"
bson = { version = "2", features = ["chrono-0_4"] }
urlencoding = "2"
libloading = "0.8"
sha2 = "0.10"
# MS0.0: SQL Server 驱动（纯 Rust，无需外部驱动文件）
# tds73：启用 date/time/datetime2/datetimeoffset 等新类型解析（SQL Server 2008+）
# rust_decimal：正确读取 decimal/numeric/money 列（否则这些列会读为 NULL）
tiberius = { version = "0.12", default-features = false, features = ["tokio", "chrono", "rustls", "rust_decimal", "tds73"] }
rust_decimal = "1"
tokio-util = { version = "0.7", features = ["compat"] }
notify = "6"   # SQLite 文件外部变更监控（db/-wal mtime → Tauri 事件）
hex = "0.4"
zip = { version = "2", default-features = false, features = ["deflate"] }
sqlparser = { version = "0.53", default-features = false }
# CH0: ClickHouse 原生 TCP（9000）。启用 compression(LZ4 按块压缩，大结果集更省带宽)，
# 关闭用不到的 derive/serde 特性（减少依赖）。TLS 暂不启用（明文 TCP）。
klickhouse = { version = "0.14.0", default-features = false, features = ["compression"] }
open = "5.3.5"
tauri-plugin-clipboard-manager = "2.3.2"

# Windows：访问 WebView2 设置以关闭浏览器加速键（Ctrl+P/R/F 等），版本对齐 wry 传递依赖
[target.'cfg(windows)'.dependencies]
webview2-com = "0.38"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",   # DPAPI CryptProtectData/CryptUnprotectData
] }

[target.'cfg(target_os = "macos")'.dependencies]
# 覆写 applicationShouldTerminate: 拦截程序坞/Cmd+Q 退出（与 tauri 传递依赖同版本）
objc2 = "0.6"
